# mgnifams-site

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONVERSATION.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
audit_reports/: audit_report_2026-06-15.md
data/: grouped_size_counts_50_AA.csv  grouped_size_counts_log_50_AA.csv  khalifam_names.txt  mgnifam_names.txt  mmseqs_families_test.tsv
deployment/: ebi-wp-k8s-hl.yaml
mgnifams_site/: manage.py
result/: mgnifam10_b_counts.csv  mgnifam11_b_counts.csv  mgnifam12_b_counts.csv  mgnifam13_b_counts.csv  mgnifam14_b_counts.csv  mgnifam15_b_counts.csv  mgnifam16_b_counts.csv  mgnifam17_b_counts.csv  mgnifam18_b_counts.csv  mgnifam19_b_counts.csv  mgnifam1_b_counts.csv  mgnifam20_b_counts.csv  mgnifam21_b_counts.csv  mgnifam22_b_counts.csv  mgnifam23_b_counts.csv  mgnifam24_b_counts.csv  mgnifam25_b_counts.csv  mgnifam26_b_counts.csv  mgnifam27_b_counts.csv  mgnifam28_b_counts.csv  mgnifam29_b_counts.csv  mgnifam2_b_counts.csv  mgnifam30_b_counts.csv  mgnifam31_b_counts.csv  mgnifam32_b_counts.csv  mgnifam33_b_counts.csv  mgnifam34_b_counts.csv  mgnifam35_b_counts.csv  mgnifam36_b_counts.csv  mgnifam37_b_counts.csv  mgnifam38_b_counts.csv  mgnifam39_b_counts.csv  mgnifam3_b_counts.csv  mgnifam40_b_counts.csv  mgnifam41_b_counts.csv  mgnifam42_b_counts.csv  mgnifam43_b_counts.csv  mgnifam44_b_counts.csv  mgnifam45_b_counts.csv  mgnifam46_b_counts.csv  (+12 more)
tests/: test_all_mgnifams_download.js  test_details_translate_to_msa_pos.js
tmp/: mgnifam100_output.csv  (+103 more)
(+887 files in other folders)
