[project]
name = "mgnifams-site"
version = "2.2.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "django==6.0.5",
    "gunicorn==26.0.0",
    "requests==2.34.0",
    "whitenoise==6.12.0",
]

[dependency-groups]
dev = [
    "prek",
    "ruff",
]

[tool.uv]
package = false

[tool.ruff]
src = ["mgnifams_site"]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (undefined names, unused imports, etc.)
    "I",   # isort
    "UP",  # pyupgrade (modernise Python syntax)
]
ignore = [
    "E501",  # line too long — handled by the formatter
]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*.py" = ["E501", "F401"]

[tool.ruff.format]
quote-style = "single"
